network done, login layout
